--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -120,6 +120,10 @@
       }
     }
 
+    &.-margintop{
+      margin-top: 32px;
+    }
+
     &.edit-profile {
       float: right;
       font-size: 16px;
